Fix wrap on navigation for long words

--- a/resources/scss/public/common/_layout.scss
+++ b/resources/scss/public/common/_layout.scss
@@ -19,7 +19,7 @@
 	}
 
 	li {
-		@apply mb-1;
+		@apply mb-1 break-words;
 	}
 }
 
